force-app/main/default/objects/BMCServiceDesk__BMC_StorageExtent__c/BMCServiceDesk__BMC_StorageExtent__c.object-meta.xml
<CustomObject>
    <description>BMC_StorageExtent. CMDB Specifies a contiguous range of logical blocks on a storage media, which supports storing and retrieving data, for example, an external hard disk</description>
    <label>Storage Extent</label>
    <nameField>
        <label>Storage Extent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storage Extents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>