force-app/main/default/objects/BMCServiceDesk__BMC_StorageExtent__c/fields/BMCServiceDesk__Available_Capacity__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Available_Capacity__c</fullName>
    <label>Available Capacity</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>