force-app/main/default/objects/BMCServiceDesk__BMC_StorageExtent__c/fields/BMCServiceDesk__Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Connection_Type__c</fullName>
    <label>Connection Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>